--- a/override.css
+++ b/override.css
@@ -6,121 +6,124 @@ body {
 
 /* "work in progress" text used in references. */
 .wip {
-	font-style: italic;
+  font-style: italic;
 }
 
 /* Make h5 and h6 easier to see. */
 
 section > h5 {
-	font-style: normal;
-	font-size: 1em;
-	font-weight: bold;
-	color: #005A9C;
-	margin-bottom: 0.5em;
+  font-style: normal;
+  font-size: 1em;
+  font-weight: bold;
+  color: #005a9c;
+  margin-bottom: 0.5em;
 }
 
 section > h6 {
-	font-style: normal;
-	font-size: 1em;
-	font-weight: bold;
-	color: #005A9C;
-	padding-left: 16px;
-	margin-bottom: 0.5em;
+  font-style: normal;
+  font-size: 1em;
+  font-weight: bold;
+  color: #005a9c;
+  padding-left: 16px;
+  margin-bottom: 0.5em;
 }
 
 /* Warnings */
 
 section > .warning {
-	margin-top: 0.5em;
-	margin-bottom: 0.5em;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 dd > .warning {
-	margin-top: 0.5em;
-	margin-bottom: 0.5em;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 /* Notes */
 
 .note-title {
-	display: none;
+  display: none;
 }
 
 section > .note {
-	margin-top: 0.5em;
-	margin-bottom: 0.5em;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 dd > .note {
-	margin-top: 0.5em;
-	margin-bottom: 0.5em;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 .note > p {
-	margin: 0.5em 0;
-	padding-left: 8px;
+  margin: 0.5em 0;
+  padding-left: 8px;
 }
 
 .issue {
-	background-color: #fff0f0;
+  background-color: #fff0f0;
 }
 
 /* Examples */
 
 div.example {
-	margin-bottom: 1em;
+  margin-bottom: 1em;
 }
 
 div.example > p {
-	margin: 0.5em 0 0 0;
+  margin: 0.5em 0 0 0;
 }
 
 div.example > p:first-child {
-	margin: -0.5em 0 0 0;
+  margin: -0.5em 0 0 0;
 }
 
-div.example > ol,ul,pre,table {
-	margin: 0;
+div.example > ol,
+ul,
+pre,
+table {
+  margin: 0;
 }
 
 div.warning > p {
-	margin: 0.5em 0 0 0;
+  margin: 0.5em 0 0 0;
 }
 
 div.warning > p:first-child {
-	margin: -0.5em 0 0 0;
+  margin: -0.5em 0 0 0;
 }
 
 .example-title:before {
-	content: "Example ";
+  content: "Example ";
 }
 
 .example-title {
-	font-weight: bold;
-	background-color: #FF4500;
-	color: white;
-	letter-spacing: 0.05em;
-	display: block;
-	width: 6.3em;
-	margin: -1em 0em 1em -1em;
-	padding: 0.2em 0.2em 0.1em 0.4em;
+  font-weight: bold;
+  background-color: #ff4500;
+  color: white;
+  letter-spacing: 0.05em;
+  display: block;
+  width: 6.3em;
+  margin: -1em 0em 1em -1em;
+  padding: 0.2em 0.2em 0.1em 0.4em;
 }
 
 .example-title:after {
-	counter-increment: example;
-	content: counter(example);
+  counter-increment: example;
+  content: counter(example);
 }
 
 /* Remove extra margin from around each param description */
 .prmDesc > p {
-	margin: 0 0;
+  margin: 0 0;
 }
 
 /* "Introduced in DOM Level n" */
 
 .intro-dom {
-	font-size: 0.9em;
-	font-style: italic;
+  font-size: 0.9em;
+  font-style: italic;
 }
 
 /* Suppress auto-generated IDL sections in the Appendix.
@@ -128,135 +131,141 @@ div.warning > p:first-child {
  */
 
 #event-initializers > section > section > h5 {
-	display: none;
+  display: none;
 }
 
 #idl-interface-Event-initializers > h4 + pre + section {
-	display: none;
+  display: none;
 }
 
 #idl-interface-CustomEvent-initializers > h4 + pre + section {
-	display: none;
+  display: none;
 }
 
 #idl-interface-UIEvent-initializers > h4 + pre + section {
-	display: none;
+  display: none;
 }
 
 #idl-interface-FocusEvent-initializers > h4 + pre + section {
-	display: none;
+  display: none;
 }
 
 #idl-interface-MouseEvent-initializers > h4 + pre + section {
-	display: none;
+  display: none;
 }
 
 #idl-interface-WheelEvent-initializers > h4 + pre + section {
-	display: none;
+  display: none;
 }
 
 #idl-interface-KeyboardEvent-initializers > h4 + div + pre + section {
-	display: none;
+  display: none;
 }
 
 #idl-interface-CompositionEvent-initializers > h4 + div + pre + section {
-	display: none;
+  display: none;
 }
 
 /* Formatting for the key value tables.
  */
 /* The <div> that contains the key table. */
 .key-table {
-	padding: 0 15px 0 30px;	
+  padding: 0 15px 0 30px;
 }
 
 .key-value-table {
-	width: 100%;
+  width: 100%;
 }
 
 /* The cell in a key table that contains the key name. */
 .key-table-key {
-	vertical-align: top;
+  vertical-align: top;
 }
 
 /* Formatting for the event sequence tables.
  */
 .event-sequence-table th {
-	background:none repeat scroll 0 0 #E8EDFF;
-	color:#003399;
-	font-weight:normal;
-	padding: 0.25em 0.5em 0.25em 0.5em;
+  background: none repeat scroll 0 0 #e8edff;
+  color: #003399;
+  font-weight: normal;
+  padding: 0.25em 0.5em 0.25em 0.5em;
 }
 
 .event-sequence-table td {
-	background:none repeat scroll 0 0 #ffffff;
-	color:#666699;
-	padding: 0 0.5em 0 0.5em;
+  background: none repeat scroll 0 0 #ffffff;
+  color: #666699;
+  padding: 0 0.5em 0 0.5em;
 }
 
 .event-sequence-table tr:hover td {
-  background:none repeat scroll 0 0 #E8EDFF;
-  color:#333399;
+  background: none repeat scroll 0 0 #e8edff;
+  color: #333399;
 }
 
 /* Formatting for the legacy key tables in the Appendix.
  */
 .legacy-key-table th {
-	background:none repeat scroll 0 0 #E8EDFF;
-	color:#003399;
-	font-weight:normal;
-	padding: 0.25em 0.5em 0.25em 0.5em;
+  background: none repeat scroll 0 0 #e8edff;
+  color: #003399;
+  font-weight: normal;
+  padding: 0.25em 0.5em 0.25em 0.5em;
 }
 
 .legacy-key-table td {
-	background:none repeat scroll 0 0 #ffffff;
-	color:#666699;
-	padding: 0 0.5em 0 0.5em;
+  background: none repeat scroll 0 0 #ffffff;
+  color: #666699;
+  padding: 0 0.5em 0 0.5em;
 }
 
 .legacy-key-table tr:hover td {
-  background:none repeat scroll 0 0 #E8EDFF;
-  color:#333399;
+  background: none repeat scroll 0 0 #e8edff;
+  color: #333399;
 }
 
 .cell-center {
-	text-align: center;
+  text-align: center;
 }
 
 .cell-number {
-	text-align: right;
-	min-width: 3em;
+  text-align: right;
+  min-width: 3em;
 }
 
 /* formatting for data tables (including the keyboard codes) */
 .data-table {
-  border-collapse:collapse;
-  text-align:left;
+  border-collapse: collapse;
+  text-align: left;
   width: 100%;
 }
 
 .data-table th {
-  background:none repeat scroll 0 0 #B9C9FE;
-  border-bottom:1px solid #FFFFFF;
-  border-top:4px solid #AABCFE;
-  color:#003399;
-  font-weight:normal;
+  background: none repeat scroll 0 0 #b9c9fe;
+  border-bottom: 1px solid #ffffff;
+  border-top: 4px solid #aabcfe;
+  color: #003399;
+  font-weight: normal;
   padding: 2px;
   padding-left: 0.5em;
 }
 
 .data-table td {
-  background:none repeat scroll 0 0 #E8EDFF;
-  border-bottom:1px solid #FFFFFF;
-  border-top:1px solid transparent;
-  color:#666699;
+  background: none repeat scroll 0 0 #e8edff;
+  border-bottom: 1px solid #ffffff;
+  border-top: 1px solid transparent;
+  color: #666699;
   padding: 2px;
   padding-left: 1em;
 }
 
 .data-table tr:hover td {
-  background:none repeat scroll 0 0 #D0DAFD;
-  color:#333399;
+  background: none repeat scroll 0 0 #d0dafd;
+  color: #333399;
+}
+
+/* 汉字字体 */
+body {
+  font-family: BlinkMacSystemFont, Helvetica Neue, PingFang SC, Microsoft YaHei,
+    Source Han Sans SC, Noto Sans CJK SC, WenQuanYi Micro Hei, sans-serif !important;
 }
 
 /* 无法直接翻译的标题可以直接隐藏替换 */
