--- a/override.css
+++ b/override.css
@@ -510,3 +510,16 @@ ul.index {
 ul.index > li {
   width: 33%;
 }
+
+.IPA {
+  color: #202122;
+  line-height: 1.6;
+  direction: ltr;
+  font-size: 0.938rem;
+  font-family: "Charis SIL", "Doulos SIL", "Linux Libertine", "Segoe UI",
+    "Lucida Sans Unicode", "Code2000", "Gentium", "Gentium Alternative",
+    "TITUS Cyberbit Basic", "Arial Unicode MS", "IPAPANNEW",
+    "Chrysanthi Unicode", "GentiumAlt", "Bitstream Vera", "Bitstream Cyberbit",
+    "Hiragino Kaku Gothic Pro", "Lucida Grande", sans-serif !important;
+  text-decoration: none !important;
+}
